--- a/Binarization Amin.ipynb
+++ b/Binarization Amin.ipynb
@@ -1,22 +1,7 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
-      "cell_type": "code",
-      "execution_count": 1,
+      "cell_type": "markdown",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -24,15 +9,6 @@
         "id": "n_8yO0GIOtHR",
         "outputId": "367a63e6-77f9-4129-cd50-51328eb977bd"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Binary image saved as binary_image.jpg\n"
-          ]
-        }
-      ],
       "source": [
         "from PIL import Image\n",
         "\n",
@@ -76,6 +52,11 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 24,
+      "metadata": {
+        "id": "snDUT_pQpNPT"
+      },
+      "outputs": [],
       "source": [
         "from PIL import Image\n",
         "\n",
@@ -96,51 +77,11 @@
         "\n",
         "binarized_image.save('binarized_image1.jpg')\n",
         "binarized_image.show()\n"
-      ],
-      "metadata": {
-        "id": "snDUT_pQpNPT"
-      },
-      "execution_count": 24,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "\n",
-        "with open('a3.jpg', 'rb') as f:\n",
-        "\n",
-        "    f.seek(2)\n",
-        "    image_data = f.read()\n",
-        "width = 256\n",
-        "height = 256\n",
-        "\n",
-        "window_size = 3\n",
-        "binarized_image = [[0 for _ in range(width)] for _ in range(height)]\n",
-        "\n",
-        "for y in range(height):\n",
-        "    for x in range(width):\n",
-        "        min_y = max(0, y - window_size // 2)\n",
-        "        max_y = min(height - 1, y + window_size // 2)\n",
-        "        min_x = max(0, x - window_size // 2)\n",
-        "        max_x = min(width - 1, x + window_size // 2)\n",
-        "\n",
-        "        total_intensity = 0\n",
-        "        num_pixels = 0\n",
-        "        for yy in range(min_y, max_y + 1):\n",
-        "            for xx in range(min_x, max_x + 1):\n",
-        "                pixel_index = yy * width + xx\n",
-        "                total_intensity += image_data[pixel_index]\n",
-        "                num_pixels += 1\n",
-        "        local_threshold = total_intensity // num_pixels\n",
-        "        pixel_index = y * width + x\n",
-        "        if image_data[pixel_index] >= local_threshold:\n",
-        "            binarized_image[y][x] = 255\n",
-        "        else:\n",
-        "            binarized_image[y][x] = 0\n",
-        "\n",
-        "for row in binarized_image:\n",
-        "    print(row)\n"
-      ],
+      "execution_count": 18,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -148,11 +89,10 @@
         "id": "lGiHyO7Eq8JZ",
         "outputId": "d919de2c-23fc-4abf-fd67-1a97892699f2"
       },
-      "execution_count": 18,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "[0, 0, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 255, 0, 0, 0, 255, 255, 0, 255, 0, 0, 0, 0, 0, 0, 0, 255, 0, 255, 0, 0, 255, 0, 255, 255, 0, 255, 0, 255, 0, 0, 255, 0, 0, 0, 0, 255, 0, 255, 0, 255, 255, 0, 0, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 255, 0, 255, 255, 0, 0, 0, 0, 0, 0, 0, 255, 255, 0, 255, 255, 0, 0, 0, 0, 255, 255, 0, 255, 255, 255, 0, 0, 255, 0, 0, 0, 255, 255, 0, 0, 0, 255, 255, 255, 255, 0, 0, 0, 0, 0, 255, 255, 0, 255, 0, 255, 0, 255, 0, 255, 255, 255, 255, 0, 0, 255, 0, 255, 255, 0, 255, 255, 255, 255, 0, 255, 255, 255, 0, 255, 0, 255, 255, 0, 0, 0, 0, 255, 0, 255, 0, 255, 0, 255, 0, 0, 255, 255, 0, 0, 255, 0, 0, 0, 255, 255, 255, 0, 255, 0, 255, 0, 255, 0, 255, 0, 255, 0, 255, 0, 255, 0, 255, 0, 255, 0, 0, 255, 255, 255, 0, 255, 0, 255, 0, 255, 255, 255, 255, 0, 0, 255, 0, 255, 255, 255, 0, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 0, 255, 255, 255, 0, 255, 0, 255, 0, 255, 0, 255, 255, 255, 255, 0, 255, 0, 255, 255, 0, 255, 255, 255, 0, 255, 255, 0, 0, 255, 255, 255, 255]\n",
             "[255, 255, 255, 0, 255, 255, 255, 255, 255, 255, 0, 255, 255, 255, 255, 255, 255, 0, 255, 0, 255, 0, 255, 255, 255, 255, 255, 0, 255, 0, 255, 255, 0, 255, 255, 255, 255, 0, 255, 0, 255, 0, 255, 0, 255, 0, 255, 255, 0, 255, 0, 255, 255, 255, 0, 255, 0, 255, 0, 255, 255, 255, 255, 255, 255, 255, 255, 0, 255, 0, 0, 0, 255, 255, 255, 255, 255, 255, 0, 255, 255, 255, 255, 255, 0, 255, 255, 0, 255, 0, 255, 0, 255, 0, 255, 0, 255, 255, 255, 255, 255, 0, 255, 255, 255, 0, 0, 255, 0, 255, 255, 255, 255, 255, 0, 255, 0, 255, 255, 255, 0, 255, 0, 255, 255, 0, 0, 255, 0, 255, 0, 0, 255, 0, 255, 0, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 255, 255, 255, 255, 255, 0, 255, 255, 0, 255, 0, 255, 255, 0, 0, 255, 0, 255, 255, 0, 255, 255, 0, 255, 0, 255, 255, 255, 255, 0, 255, 255, 255, 255, 0, 0, 255, 0, 255, 255, 0, 0, 255, 0, 255, 0, 0, 0, 0, 0, 255, 0, 0, 0, 0, 0, 0, 255, 255, 0, 255, 0, 255, 0, 0, 0, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 255, 0, 0, 0, 255, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 255, 255, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 255, 0, 0, 255]\n",
@@ -412,10 +352,51 @@
             "[255, 255, 0, 0, 0, 0, 0, 0, 255, 0, 255, 255, 0, 0, 0, 255, 255, 255, 255, 255, 255, 0, 0, 0, 0, 0, 255, 255, 255, 0, 255, 255, 255, 0, 0, 255, 255, 255, 0, 255, 0, 255, 255, 255, 255, 255, 0, 0, 255, 255, 0, 255, 0, 0, 255, 255, 0, 255, 0, 255, 0, 0, 255, 255, 255, 0, 255, 0, 0, 255, 255, 0, 255, 255, 0, 255, 0, 0, 255, 0, 255, 255, 255, 255, 255, 255, 255, 0, 0, 0, 255, 0, 255, 255, 0, 255, 0, 0, 255, 0, 0, 255, 255, 0, 0, 255, 0, 0, 0, 255, 255, 255, 255, 0, 255, 255, 0, 0, 255, 0, 255, 255, 0, 255, 255, 0, 255, 0, 255, 0, 0, 0, 255, 0, 0, 255, 0, 255, 0, 255, 255, 255, 255, 255, 255, 255, 0, 255, 255, 255, 255, 255, 0, 0, 255, 0, 0, 255, 255, 255, 0, 255, 0, 0, 255, 255, 255, 0, 0, 0, 0, 255, 0, 255, 0, 255, 0, 255, 0, 0, 255, 0, 0, 0, 255, 255, 255, 255, 255, 255, 0, 255, 0, 255, 0, 255, 0, 0, 255, 0, 0, 255, 255, 255, 0, 0, 0, 0, 255, 255, 0, 255, 255, 0, 255, 0, 255, 255, 0, 255, 0, 255, 0, 0, 0, 0, 0, 255, 0, 255, 0, 255, 0, 0, 255, 255, 0, 0, 255, 0, 255, 0, 0, 255, 255, 255, 0, 255, 0, 255, 0, 255, 0, 255, 0, 255]\n"
           ]
         }
+      ],
+      "source": [
+        "\n",
+        "with open('a3.jpg', 'rb') as f:\n",
+        "\n",
+        "    f.seek(2)\n",
+        "    image_data = f.read()\n",
+        "width = 256\n",
+        "height = 256\n",
+        "\n",
+        "window_size = 3\n",
+        "binarized_image = [[0 for _ in range(width)] for _ in range(height)]\n",
+        "\n",
+        "for y in range(height):\n",
+        "    for x in range(width):\n",
+        "        min_y = max(0, y - window_size // 2)\n",
+        "        max_y = min(height - 1, y + window_size // 2)\n",
+        "        min_x = max(0, x - window_size // 2)\n",
+        "        max_x = min(width - 1, x + window_size // 2)\n",
+        "\n",
+        "        total_intensity = 0\n",
+        "        num_pixels = 0\n",
+        "        for yy in range(min_y, max_y + 1):\n",
+        "            for xx in range(min_x, max_x + 1):\n",
+        "                pixel_index = yy * width + xx\n",
+        "                total_intensity += image_data[pixel_index]\n",
+        "                num_pixels += 1\n",
+        "        local_threshold = total_intensity // num_pixels\n",
+        "        pixel_index = y * width + x\n",
+        "        if image_data[pixel_index] >= local_threshold:\n",
+        "            binarized_image[y][x] = 255\n",
+        "        else:\n",
+        "            binarized_image[y][x] = 0\n",
+        "\n",
+        "for row in binarized_image:\n",
+        "    print(row)\n"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": 23,
+      "metadata": {
+        "id": "ZveNqa19rKCz"
+      },
+      "outputs": [],
       "source": [
         "from PIL import Image\n",
         "\n",
@@ -435,12 +416,21 @@
         "\n",
         "binarized_image.save('binarized_image1.jpg')\n",
         "binarized_image.show()"
-      ],
-      "metadata": {
-        "id": "ZveNqa19rKCz"
-      },
-      "execution_count": 23,
-      "outputs": []
+      ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
